Tratamento para caso tente alugar um filme sem estoque